--- a/client/index.html
+++ b/client/index.html
@@ -11,14 +11,18 @@
     />
     <meta property="og:title" content="Scholars-Path | Your Educational Journey" />
     <meta property="og:description" content="An innovative platform for modern education." />
-    <meta property="og:image" content="/social-preview.png" /> <meta property="og:url" content="https://www.yourwebsite.com" /> <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:image" content="/social-preview.png" />
+    <meta property="og:url" content="https://scholars-path-frontend.onrender.com" />
+    <meta name="twitter:card" content="summary_large_image" />
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" /> <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Roboto:wght@300;400;500;700&display=swap"
     />
   </head>
   <body>
@@ -26,5 +30,6 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     
-    </body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+  </body>
 </html>
